<resources>
    <string name="app_name">Muhex</string>
    <string name="app_icon">App icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="integrations">Integrations</string>
    <string name="finance">Finance</string>
    <string name="threads">Threads</string>
    <string name="fignuts">Fignuts</string>
    <string name="enlarz_system">Enlarz System</string>
    <string name="hugeicons">Hugeicons</string>
    <string name="contacts">Contacts</string>
    <string name="explore">Explore</string>
    <string name="archive">Archive</string>
    <string name="favourites">Favourite\'s</string>
    <string name="drafts_count">Drafts (3)</string>
    <string name="general">General</string>
    <string name="drafts">Drafts</string>
    <string name="feedback">Feedback</string>
    <string name="folders_count">Folders (6)</string>
    <string name="stroke_llc">Stroke LLC</string>
    <string name="duotone">Duotone</string>
    <string name="solid">Solid</string>
    <string name="animations">Animations</string>
    <string name="menu_pin">Pin</string>
    <string name="menu_unpin">Unpin</string>
    <string name="menu_dock">Dock</string>
    <string name="menu_undock">Undock</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_unhide">Unhide</string>
    <string name="menu_open">Open</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="unable_open_info">Unable to open app info</string>
    <string name="menu_more">More</string>
    <string name="menu_back">Back</string>
    <string name="msg_pinned">App pinned</string>
    <string name="msg_unpinned">App unpinned</string>
    <string name="msg_docked">App docked</string>
    <string name="msg_undocked">App undocked</string>
    <string name="msg_no_space_pinned">No space in pinned (Max 6)</string>
    <string name="msg_no_space_dock">No space in dock (Max 8)</string>
    <string name="msg_hidden">App hidden</string>
    <string name="msg_unhidden">App unhidden</string>
    <string name="msg_locked">App locked</string>
    <string name="msg_unlocked">App unlocked</string>
</resources>